--- a/front/src/index.html
+++ b/front/src/index.html
@@ -44,6 +44,7 @@
         </div>
       </section>
     </main>
+    <span id='login-input'>Login</span>
     <footer>
       <p>By <i>Amir Angel</i></p>
     </footer>
